apps/blog/src/styles.css
@media  (max-width: 650px) {
  :root {
    --sizes-content: 100% !important;
    --fontSizes-xxs: 11px !important;
    --fontSizes-xs: 13px !important;
    --fontSizes-sm: 16px !important;
    --fontSizes-regular: 18px !important;
    --fontSizes-lg: 26px !important;
    --fontSizes-xl: 30px !important;
    --fontSizes-2xl: 32px !important;
    --fontSizes-3xl: 50px !important;

    --sizes-md: 4px !important;
    --sizes-lg: 8px !important;
    --sizes-xl: 16px !important;
    --sizes-2xl: 32px !important;
  }

  #sketches-link {
    display:none;
  }

  #mockup {
    display:none;
  }

  #tiles > div {
    width: 100%;
  }

  #tiles > div > span {
    font-size: var(--fontSizes-lg) !important;
  }

  #footer,
  #tiles {
    flex-direction: column;
  }
  #tiles > div > text {
    font-size: var(--fontSizes-lg) !important;
  }

  [data-employment-details]{
    white-space: unset !important;
  }

  #services {
    flex-direction: column;
  }

  #services > div {
    width:100%;
  }

  #resume {
    max-width: 100%;
  }

  #resume aside {
    display: none;
  }

  #about {
    flex-direction: column;
  }
  #about > div {
    flex:1;
    max-width:unset;
  }

  #about img {
    width: 100%;
  }
}


@media  (min-width: 1600px) {
  /**
     It would be better if stitches supported responsive tokens
     but they don't.
   */
  :root {
    --sizes-content: 1200px !important;
    --fontSizes-xxs: 11px !important;
    --fontSizes-xs: 13px !important;
    --fontSizes-sm: 22px !important;
    --fontSizes-regular: 26px !important;
    --fontSizes-lg: 34px !important;
    --fontSizes-xl: 40px !important;
    --fontSizes-2xl: 60px !important;
    --fontSizes-3xl: 80px !important;

    --sizes-md: 12px !important;
    --sizes-lg: 20px !important;
    --sizes-xl: 40px !important;
    --sizes-2xl: 80px !important;
  }
}


/* You can add global styles to this file, and also import other style files */
@media print {
  @page {
    size: auto;
    margin: .8cm;
  }

  body * {
    visibility: hidden;
  }

  [data-print-root], [data-print-root] * {
    visibility: visible;
  }
  [data-print-header] {
    display:flex !important;
    margin-top:16px;
  }
  [data-print-title] {
    font-size:64px !important;
  }

  [data-badges] > * {
    border: 2px solid black !important;
  }

  [data-print-root] {
    position: absolute;
    left: 0;
    top: 0;
  }

  [data-print-only] {
    display:block !important;
  }

  [data-nowrap] {
    white-space: nowrap !important;
  }


  *:not(a):not(#skills) {
    color:black !important;
  }
  p {
    color: rgba(0,0,0,.7) !important;
  }

}

